Full screen menu z-index fixed. container structure fixed. cards property change to margin top

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,10 @@ body {
     color: white;
 }
 
+#navbarNav {
+    z-index: 2;
+}
+
 .row {
     margin: 100px 0px;
     justify-content: center;
@@ -68,26 +72,23 @@ body {
     margin: 50px auto 0 auto;
 }
 
-#extensions .card:nth-child(2) {
-    bottom: 50%;
-    transform: translateY(10%);
+.row .card:nth-child(2) {
+    margin-top: 20px;
+    transform: translateY(20px);
 }
 
-#extensions .card:nth-child(3) {
-    bottom: 50%;
-    transform: translateY(20%);
+.card:nth-child(3) {
+    margin-top: 40px;
+    transform: translateY(40px);
 }
 
 
 /* #firefox {
-    bottom: 50%;
-    transform: translateY(10%);
-} */
+    transform: translateY(20px);
+}
 
-
-/* #opera {
-    bottom: 50%;
-    transform: translateY(20%);
+#opera {
+    transform: translateY(40px);
 } */
 
 .accordion-button {
@@ -151,6 +152,15 @@ body {
     color: $secondary;
 }
 
+@include media-breakpoint-up (lg) {
+    #firefox {
+        margin-top: 50px;
+    }
+    #opera {
+        margin-top: 100px;
+    }
+}
+
 // FULL SCREEN MENU
 @include media-breakpoint-down(lg) {
     .wrapper {
@@ -175,7 +185,7 @@ body {
         font-size: 25px;
     }
     .navbar-toggler {
-        z-index: 2;
+        z-index: 4;
         text-align: center;
         cursor: pointer;
     }
